# tamil-simple-ocr

./: Cargo.toml  Readme.md  tamil_pdf_extracted_text.txt
src/: main.rs  ollama.rs
