[package]
name = "tamil-simple-ocr"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
image = "0.25.10"
imageproc = "0.26.2"
pdf_oxide = { version = "0.3.63", features = ["rendering"] }
pdfium-render = "0.9.1"
rayon = "1.12.0"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tesseract = "0.15.2"
